saas/k8s/Demo6-Spark-ML/jupyter-v1.0.0/k8s/jupyter-notebook.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-jupyter

spec:
  clusterIP: None
  selector:
    app: spark-jupyter
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
