saas/k8s/Demo6-Spark-ML/jupyter-v1.0.0/k8s/jupyter-notebook.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jupyter-ingress-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: jupyter.data.davar.com
      http:
        paths:
          - backend:
              serviceName: spark-jupyter
              servicePort: 8888
            path: /
  tls:
    - hosts:
        - jupyter.data.davar.com
      secretName: jupyter-production-tls
